--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -16,3 +16,49 @@ body {
 #editorjs {
   @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
 }
+
+.editor-html {
+    @apply bg-gray-50 dark:bg-gray-800 p-5 rounded;
+
+    h1 {
+        font-size: 25px;
+        font-weight: 500;
+    }
+
+    h2 {
+        font-size: 30px;
+        font-weight: 400;
+    }
+
+    h3 {
+        font-size: 35px;
+        font-weight: 300;
+    }
+
+    h4 {
+        font-size: 40px;
+        font-weight: 200;
+    }
+
+    h5 {
+        font-size: 45px;
+        font-weight: 100;
+    }
+
+    h6 {
+        font-size: 50px;
+        font-weight: 0;
+    }
+
+    ul {
+        list-style: disc;
+    }
+
+    li {
+        margin-left: 40px;
+    }
+
+    p {
+        margin: 10px 0;
+    }
+}
