--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -9,45 +9,63 @@ body {
     @apply text-gray-900 dark:text-white
 }
 
-.fc-view-harness.fc-view-harness-active{
-    max-height: 60vh!important;
-}
-
 #editorjs {
-  @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+    @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+
+    height: 400px;
+    overflow: auto;
+
+    h1 {
+        font-size: 30px;
+    }
+
+    h2 {
+        font-size: 28px;
+    }
+
+    h3 {
+        font-size: 26px;
+    }
+
+    h4 {
+        font-size: 24px;
+    }
+
+    h5 {
+        font-size: 22px;
+    }
+
+    h6 {
+        font-size: 20px;
+    }
 }
 
 .editor-html {
     @apply bg-gray-50 dark:bg-gray-800 p-5 rounded;
+    font-weight: 500;
 
     h1 {
-        font-size: 25px;
-        font-weight: 500;
+        font-size: 30px;
     }
 
     h2 {
-        font-size: 30px;
-        font-weight: 400;
+        font-size: 28px;
     }
 
     h3 {
-        font-size: 35px;
-        font-weight: 300;
+        font-size: 26px;
     }
 
     h4 {
-        font-size: 40px;
-        font-weight: 200;
+        font-size: 24px;
     }
 
     h5 {
-        font-size: 45px;
-        font-weight: 100;
+        font-size: 22px;
     }
 
     h6 {
-        font-size: 50px;
-        font-weight: 0;
+        font-size: 20px;
     }
 
     ul {
