--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -12,3 +12,30 @@ body {
 .fc-view-harness.fc-view-harness-active{
     max-height: 60vh!important;
 }
+
+.time-slots-container::-webkit-scrollbar {
+    display: none; /* Pour les navigateurs WebKit/Blink comme Chrome et Safari */
+}
+
+.time-slots-container::after {
+    /*content: '';*/
+    /*position: absolute;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
+    /*right: 0;*/
+    /*height: 100px; !* Hauteur de l'effet de fondu *!*/
+    /*pointer-events: none; !* Assure que les clics passent à travers *!*/
+    /*background: linear-gradient(to bottom, transparent, white); !* Crée un effet de fondu *!*/
+}
+
+
+.card-hover:hover {
+    transform: scale(1.05); /* Légèrement agrandir la carte */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Ajouter une ombre pour un effet de profondeur */
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* Animation fluide */
+}
+.truncate-text {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
