--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -12,6 +12,18 @@ body {
     max-height: 60vh !important;
 }
 
+.time-slots-container::-webkit-scrollbar {
+    display: none;
+}
+
+.truncate-text {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+
+
 #editorjs {
     @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
 
